apps/external-dns/temp-ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: temp-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: temp.alexcook.dev
    external-dns.alpha.kubernetes.io/target: ddns.alexcook.dev
spec:
  rules:
  - host: temp.alexcook.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fake-service
            port:
              number: 80
